@@ -6,17 +6,18 @@ import java.util.List;
 public class M78Subsets {
 
     public List<List<Integer>> subsets(int[] nums) {
-        List<List<Integer>> ans = new ArrayList<>();
-        generate(ans, new ArrayList<>(), nums, 0);
-        return ans;
+        List<List<Integer>> subsets = new ArrayList<>();
+        backtrack(subsets, new ArrayList<>(), nums, 0);
+        return subsets;
     }
 
-    private void generate(List<List<Integer>> ans, List<Integer> curr, int[] nums, int index) {
-        ans.add(new ArrayList<>(curr));
+    private void backtrack(List<List<Integer>> subsets, List<Integer> subset, int[] nums, int index) {
+        subsets.add(new ArrayList<>(subset));
+
         for (int i = index; i < nums.length; i++) {
-            curr.add(nums[i]);
-            generate(ans, curr, nums, i + 1);
-            curr.remove(curr.size() - 1);
+            subset.add(nums[i]);
+            backtrack(subsets, subset, nums, i + 1);
+            subset.removeLast();
         }
     }
 }
